--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -734,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 33,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -767,7 +767,7 @@
         "                else:\n",
         "                    row = type(value[0])\n",
         "                for i in value:\n",
-        "                    if type(i) is not int or type(i) is not float or type(i) is not list:\n",
+        "                    if type(i) is not int and type(i) is not float and type(i) is not list:\n",
         "                        raise RuntimeError(\"Matrix is invalid. Please ensure that all elements share a type.\")\n",
         "                if row is list:\n",
         "                    lenInner = len(value[0])\n",
@@ -782,7 +782,8 @@
         "                    self.shape = (len(value), len(value[0]))\n",
         "                except:\n",
         "                    self.shape = (len(value), 1)\n",
-        "            if matrix == []:\n",
+        "            else:\n",
+        "                matrix = []\n",
         "                for i in range(dim[0]):\n",
         "                        row = []\n",
         "                        for j in range(dim[1]):\n",
@@ -796,28 +797,29 @@
         "    Print the matrix to screen\n",
         "    \"\"\"\n",
         "    def __repr__(self):\n",
+        "\n",
         "        string = \"  \"\n",
-        "        for i in range(shape[0]):\n",
-        "            if shape[1]>1:\n",
-        "                if i < shape[0]-1:\n",
+        "        for i in range(self.shape[0]):\n",
+        "            if self.shape[1]>1:\n",
+        "                if i < self.shape[0]-1:\n",
         "                    string += \"[ \"\n",
-        "                    for j in range(shape[1]):\n",
-        "                        string += str(value[i][j]) + \" \"\n",
+        "                    for j in range(self.shape[1]):\n",
+        "                        string += str(self.value[i][j]) + \" \"\n",
         "                    string += \"]\\n  \"\n",
         "                else:\n",
         "                    string += \"[ \"\n",
-        "                    for j in range(shape[1]):\n",
-        "                        string += str(value[i][j]) + \" \"\n",
+        "                    for j in range(self.shape[1]):\n",
+        "                        string += str(self.value[i][j]) + \" \"\n",
         "            else:\n",
-        "                if shape[0]==1:\n",
+        "                if self.shape[0]==1:\n",
         "                    string += \"[ \"\n",
-        "                if i < shape[0]-1:\n",
-        "                    if shape[1]>1:\n",
+        "                if i < self.shape[0]-1:\n",
+        "                    if self.shape[1]>1:\n",
         "                        string += \"[ \"\n",
-        "                    string += str(value[i]) + \"\\n  \"\n",
+        "                    string += str(self.value[i]) + \"\\n  \"\n",
         "                else:\n",
-        "                    string += str(value[i]) + \" \"\n",
-        "        if shape[1]>1:\n",
+        "                    string += str(self.value[i]) + \" \"\n",
+        "        if self.shape[1]>1:\n",
         "            string += \"]\\n\\n\"\n",
         "        return string"
       ]
@@ -825,30 +827,39 @@
     {
       "cell_type": "code",
       "source": [
-        "%debug"
+        "mat1 = Matrix(dim=(10,10))"
       ],
       "metadata": {
+        "id": "G0N7emvgecJ1"
+      },
+      "id": "G0N7emvgecJ1",
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (mat2)"
+      ],
+      "metadata": {
+        "id": "KrAU8mSBfekH",
+        "outputId": "8ebdd9eb-4927-413c-ceef-f7f65a83b4c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "ykH6O3YrZ83F",
-        "outputId": "e1330f83-5019-461d-8b04-f776ee58b408"
+        }
       },
-      "id": "ykH6O3YrZ83F",
-      "execution_count": 8,
+      "id": "KrAU8mSBfekH",
+      "execution_count": 37,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "> \u001b[0;32m/tmp/ipython-input-1210032169.py\u001b[0m(10)\u001b[0;36m__abs__\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32m      8 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0m\u001b[0;32m      9 \u001b[0;31m    \u001b[0;32mdef\u001b[0m \u001b[0m__abs__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0m\u001b[0;32m---> 10 \u001b[0;31m        \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreal\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimag\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0m\u001b[0;32m     11 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0m\u001b[0;32m     12 \u001b[0;31m    \u001b[0;32mdef\u001b[0m \u001b[0m__lt__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0m\n",
-            "ipdb> s\n"
+            "  [ 4 6 1 9 10 12 1 7 ]\n",
+            "  [ 1 2 3 4 5 6 7 8 ]\n",
+            "  [ 19 0 3 1 10 15 -1 -1 ]\n",
+            "\n",
+            "\n"
           ]
         }
       ]
