--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -734,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 52,
       "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1",
       "metadata": {
         "id": "4459f6b1-acb3-4073-84fb-9d6c59c3a0c1"
@@ -779,19 +779,19 @@
         "                                raise RuntimeError(\"Matrix is invalid. Please ensure that all elements are numeric (either float or int).\")\n",
         "                self.value = value\n",
         "                try:\n",
-        "                    self.shape = (len(value), len(value[0]))\n",
+        "                  self.shape = (len(value), len(value[0]))\n",
         "                except:\n",
-        "                    self.shape = (len(value), 1)\n",
-        "            else:\n",
-        "                matrix = []\n",
-        "                for i in range(dim[0]):\n",
-        "                        row = []\n",
-        "                        for j in range(dim[1]):\n",
-        "                            row.append(1)\n",
-        "                        matrix.append(row)\n",
+        "                  self.shape = (len(value), 1)\n",
+        "        else:\n",
+        "            matrix = []\n",
+        "            for i in range(dim[0]):\n",
+        "                    row = []\n",
+        "                    for j in range(dim[1]):\n",
+        "                        row.append(1)\n",
+        "                    matrix.append(row)\n",
         "\n",
-        "                value = matrix\n",
-        "                shape = dim\n",
+        "            self.value = matrix\n",
+        "            self.shape = dim\n",
         "\n",
         "    \"\"\"\n",
         "    Print the matrix to screen\n",
@@ -833,33 +833,35 @@
         "id": "G0N7emvgecJ1"
       },
       "id": "G0N7emvgecJ1",
-      "execution_count": 39,
+      "execution_count": 44,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print (mat2)"
+        "print (mat1)"
       ],
       "metadata": {
-        "id": "KrAU8mSBfekH",
-        "outputId": "8ebdd9eb-4927-413c-ceef-f7f65a83b4c5",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 273
+        },
+        "id": "KrAU8mSBfekH",
+        "outputId": "105fbf2f-972d-49ae-be12-7bac2784ffa0"
       },
       "id": "KrAU8mSBfekH",
-      "execution_count": 37,
+      "execution_count": 45,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "  [ 4 6 1 9 10 12 1 7 ]\n",
-            "  [ 1 2 3 4 5 6 7 8 ]\n",
-            "  [ 19 0 3 1 10 15 -1 -1 ]\n",
-            "\n",
-            "\n"
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'Matrix' object has no attribute 'shape'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-631713377.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mmat1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-1051735833.py\u001b[0m in \u001b[0;36m__repr__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0mstring\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"  \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Matrix' object has no attribute 'shape'"
           ]
         }
       ]
